# video_processing_opencv_cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: carddetector_video.cpp  facedetector_video.cpp  imgquality_video.cpp  linedetection_image.cpp  linedetection_video.cpp  lsd_main.cpp
include/: carddetector.h  facedetector.h  imgquality.h  linedetector.h
src/: carddetector.cpp  carddetector_video.cpp  commons.cpp  commons.h  edlines.cpp  facedetector.cpp  houghlines.cpp  idcard_detector.cpp  imgquality.cpp  imgquality.h  linedetection_image.cpp  linedetection_video.cpp  linedetector.cpp  linedetector.h  lsd_main.cpp  lsdlines.cpp
tests/: util_test.cpp
